#Daniel - Adjust: Correção na chamada de arquivos no html, teste da api de noticias e restruturação das pastas.

--- a/src/app/resources/view/home.html
+++ b/src/app/resources/view/home.html
@@ -1,6 +1,13 @@
 
 <h1>Home</h1>
-<p>Nome {{name}}, idade {{idade}}</p>
+<div class="container">
+    <h2>{{titulo}}</h2>
+    <img src="{{imagem}}" alt="Imagem da notícia">
+    <p class="descricao">{{descricao}}</p>
+    <p class="autor">Fonte: {{autor}}</p>
+    <p class="data">Publicado em: {{data}}</p>
+    <a href="{{url}}" class="btn btn-success" target="_blank">Leia mais</a>
+</div>
 <script>
     
 </script>
