--- a/src/app/resources/base.html
+++ b/src/app/resources/base.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{titulo}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/base.css">
-    <link rel="stylesheet" href="../assets/css/GlobalCss.css">
+    <link rel="stylesheet" href="app/assets/css/base.css">
+    <link rel="stylesheet" href="app/assets/css/GlobalCss.css">
   </head>
   <body>
     <div id="carouselExampleIndicators" class="carousel slide">
@@ -17,13 +17,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../assets/images/Reciclagem1.png" class="d-block w-100" alt="...">
+          <img src="app/assets/images/Reciclagem1.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../assets/images/Reciclagem2.png" class="d-block w-100" alt="...">
+          <img src="app/assets/images/Reciclagem2.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="../assets/images/Reciclagem3.png" class="d-block w-100" alt="...">
+          <img src="app/assets/images/Reciclagem3.png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
