Implementando Gerenciador de rotas dinamicas PARCIAL

--- a/src/app/resources/base.html
+++ b/src/app/resources/base.html
@@ -37,10 +37,10 @@
     </div>
     <nav>
       <ul id="listNav">
-        <li class="itemList"><a href="#">Home</a></li>
+        <li class="itemList"><a href="{{URL}}">Home</a></li>
         <li class="itemList"><a href="#">Noticias</a></li>
         <li class="itemList"><a href="#">Aprenda a reciclar</a></li>
-        <li class="itemList"><a href="#">Sobre</a></li>
+        <li class="itemList"><a href="{{URL}}/sobre">Sobre</a></li>
       </ul>
     </nav>
 
