Finalização Gerenciador de Rotas

--- a/src/app/resources/base.html
+++ b/src/app/resources/base.html
@@ -38,8 +38,8 @@
     <nav>
       <ul id="listNav">
         <li class="itemList"><a href="{{URL}}">Home</a></li>
-        <li class="itemList"><a href="#">Noticias</a></li>
-        <li class="itemList"><a href="#">Aprenda a reciclar</a></li>
+        <li class="itemList"><a href="{{URL}}/noticias">Noticias</a></li>
+        <li class="itemList"><a href="{{URL}}/aprendareciclar">Aprenda a reciclar</a></li>
         <li class="itemList"><a href="{{URL}}/sobre">Sobre</a></li>
       </ul>
     </nav>
