link tela arthur

--- a/src/app/resources/view/noticias.html
+++ b/src/app/resources/view/noticias.html
@@ -2,6 +2,7 @@
 <div class="container">
     <h2>{{titulo}}</h2>
     <p class="descricao">{{descricao}}</p>
+    <a href="{{URL}}/descricao">Link Tela Descrição Arthur</a>
 </div>
 <script>
 
