Arthur - Add Arquitetura Requisicao noticia

--- a/src/app/resources/view/descricao.html
+++ b/src/app/resources/view/descricao.html
@@ -4,5 +4,6 @@
     <p class="descricao">{{descricao}}</p>
 </div>
 <script>
-
+// pegar id pela url
+// fazer o get da api para o item do id especifico
 </script>
