Tela Aprenda a reciclar PARCIAL e JQUERY

--- a/src/app/resources/base.html
+++ b/src/app/resources/base.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app/assets/css/base.css">
     <link rel="stylesheet" href="app/assets/css/GlobalCss.css">
+    <script src="vendor/jquery/jquery-3.7.1.min.js" ></script>
   </head>
   <body>
     <div id="carouselExampleIndicators" class="carousel slide">
