--- a/src/app/resources/base.html
+++ b/src/app/resources/base.html
@@ -11,7 +11,7 @@
     <script src="vendor/jquery/jquery-3.7.1.min.js" ></script>
   </head>
   <body>
-    <div id="carouselExampleIndicators" class="carousel slide">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
