--- a/src/app/resources/view/aprendareciclar.html
+++ b/src/app/resources/view/aprendareciclar.html
@@ -4,23 +4,22 @@
         <h2 class="col-12 text-center card-title">{{titulo}}</h2>
     </div>
     <div class="row justify-content-center mb-5">
-        <div class="col-10 card p-3">
+        <form id="formPesquisa" class="col-10 card p-3 ">
             <label for="inputPesquisa" class="form-label">O que gostaria de aprender a reciclar hoje?</label>
             <div class="input-group mb-3">
                 <input id="inputPesquisa" type="text" class="form-control" placeholder="Ex: latinha de alumínio" aria-label="Ex: latinha de alumínio">
-                <button class="btn btn-outline-success" type="button" id="pesquisar">Pesquisar</button>
+                <button class="btn btn-outline-success" type="submit" id="pesquisar">Pesquisar</button>
             </div>
-        </div>
+        </form>
     </div>
     <div class="container mb-5">
-        <div id="divResposta" class="row justify-content-center">
+        <div id="divResposta" class="row justify-content-center ">
         
         </div>    
     </div>
 </div>
 
-
-<!-- Modal -->
+<!-- Aqui é carregado o modal de validação -->
 <div id="listaModal"></div>
 
 
