ajustes na tela Aprenda a reciclar

--- a/src/app/resources/view/aprendareciclar.html
+++ b/src/app/resources/view/aprendareciclar.html
@@ -8,7 +8,7 @@
             <label for="inputPesquisa" class="form-label">O que gostaria de aprender a reciclar hoje?</label>
             <div class="input-group mb-3">
                 <input id="inputPesquisa" type="text" class="form-control" placeholder="Ex: latinha de alumínio" aria-label="Ex: latinha de alumínio">
-                <button class="btn btn-outline-success" type="submit" id="pesquisar">Pesquisar</button>
+                <button data-bs-toggle="tooltip" data-bs-title="Pesquisar" class="btn btn-outline-success" type="submit" id="pesquisar"><i class="bi bi-search"></i></button>
             </div>
         </form>
     </div>
