--- a/src/app/resources/view/sobre.html
+++ b/src/app/resources/view/sobre.html
@@ -1,7 +1,11 @@
+<link rel="stylesheet" href="app/assets/css/sobre.css">
 
 <div class="container">
-    <h2>{{titulo}}</h2>
-    <p class="descricao">{{descricao}}</p>
+    <h2 id="Title">{{titulo}}</h2>
+    <p class="descricao">{{descricao1}}</p>
+    <p class="descricao">{{descricao2}}</p>
+    <p class="descricao">{{descricao3}}</p>
+    <p class="descricao">{{descricao4}}</p>
 </div>
 <script>
 
