--- a/src/app/resources/view/sobre.html
+++ b/src/app/resources/view/sobre.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="app/assets/css/sobre.css">
+<link rel="stylesheet" href="app/assets/css/sobrenos.css">
 
 <div class="container">
-    <h2 id="Title">{{titulo}}</h2>
+    <h2 class="col-12 text-center card-title">{{titulo}}</h2>
     <p class="descricao">{{descricao1}}</p>
     <p class="descricao">{{descricao2}}</p>
     <p class="descricao">{{descricao3}}</p>
