--- a/src/app/resources/view/sobre.html
+++ b/src/app/resources/view/sobre.html
@@ -1,12 +1,22 @@
-<link rel="stylesheet" href="app/assets/css/sobrenos.css">
+<link rel="stylesheet" href="app/assets/css/sobrenos.css" />
 
-<div class="container">
-    <h2 class="col-12 text-center card-title">{{titulo}}</h2>
-    <p class="descricao">{{descricao1}}</p>
-    <p class="descricao">{{descricao2}}</p>
-    <p class="descricao">{{descricao3}}</p>
-    <p class="descricao">{{descricao4}}</p>
-</div>
-<script>
+<section class="sobre-secao">
+  <div class="sobre-container">
+    <div class="sobre-texto">
+      <h2>{{titulo}}</h2>
+      <p>{{descricao1}}</p>
+      <p>{{descricao2}}</p>
+      <p>{{descricao3}}</p>
+      <p>{{descricao4}}</p>
+      <p>{{descricao5}}</p>
+      <p>{{descricao6}}</p>
+      <p>{{descricao7}}</p>
+    </div>
 
-</script>
+    <!-- Imagens empilhadas verticalmente -->
+    <div class="sobre-coluna-imagens">
+      <img src="app/assets/images/sobre.png" alt="Imagem institucional" class="imagem-sobre">
+      <img src="app/assets/images/logo-ecogestor.png" alt="Logo EcoGestor" class="imagem-sobre">
+    </div>
+  </div>
+</section>
