--- a/src/app/resources/view/home.html
+++ b/src/app/resources/view/home.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="app/assets/css/home.css" />
 
+<!-- Dica do dia -->
+<div id="toast" class="toast">{{DICA_DIA}}</div>
+
 <!-- 1. Abertura institucional -->
 <section class="main-content">
   <div class="container-fluid main-container">
