--- a/src/app/resources/view/aprendareciclar.html
+++ b/src/app/resources/view/aprendareciclar.html
@@ -22,5 +22,6 @@
 <!-- Aqui é carregado o modal de validação -->
 <div id="listaModal"></div>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="app/assets/js/aprendareciclar.js"></script>
